[package]
name = "lamp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
rand = "0.10.0"
ratatui = "0.30.0"
rodio = "0.19.0"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
mpris-server = "0.8"
zbus = "4.3"
tokio = { version = "1.0", features = ["full"] }
id3 = "0.6"
